Validation one page summary: show smaller map to avoid text wrapping in info pane on the right
fixes #306

--- a/packages/evolution-legacy/src/styles/survey/_admin.scss
+++ b/packages/evolution-legacy/src/styles/survey/_admin.scss
@@ -139,11 +139,11 @@
 .admin__interview-map-and-stats-container {
   display: flex;
   .admin__interview-map-container {
-    width: 70%;
+    width: 50%;
     
   }
   .admin__stats-container {
-    width: 30%;
+    width: 50%;
     padding: 1rem;
   }
 }
